<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		xmlns:tools="http://schemas.android.com/tools"
		android:orientation="vertical"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="@drawable/background_login"
		xmlns:card_view="http://schemas.android.com/apk/res-auto"
		>
	
	<ProgressBar
			android:visibility="gone"
			style="?android:attr/progressBarStyle"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/progressBar"
			android:layout_marginTop="8dp"
			app:layout_constraintTop_toTopOf="parent"
			android:layout_marginBottom="8dp"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			android:layout_marginEnd="8dp"
			android:layout_marginRight="8dp"
			app:layout_constraintStart_toStartOf="parent"
			android:layout_marginLeft="8dp"
			android:layout_marginStart="8dp"
			/>
	
	<TextView
			android:textSize="35sp"
			android:textColor="@color/white"
			android:gravity="center"
			android:text="@string/app_name"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			app:layout_constraintTop_toTopOf="parent"
			android:layout_marginTop="8dp"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			android:id="@+id/textView"
			app:layout_constraintBottom_toTopOf="@+id/linearLayout"
			app:layout_constraintDimensionRatio="w,19:6"
			app:layout_constraintVertical_bias="0.39"
			android:layout_marginLeft="8dp"
			android:layout_marginStart="8dp"
			android:layout_marginRight="8dp"
			android:layout_marginEnd="8dp"
			/>
	
	<androidx.cardview.widget.CardView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:layout_gravity="center"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintDimensionRatio="w,19:6"
			app:layout_constraintTop_toBottomOf="@+id/textView"
			android:id="@+id/linearLayout"
			app:layout_constraintEnd_toEndOf="@+id/textView"
			app:layout_constraintStart_toStartOf="@+id/textView"
			android:layout_marginLeft="8dp"
			android:layout_marginStart="8dp"
			android:layout_marginRight="8dp"
			android:layout_marginEnd="8dp"
			card_view:cardBackgroundColor="@color/transparent_color"
			android:elevation="3dp"
			app:cardCornerRadius="@dimen/layout_margin_10dp"
			android:foreground="?attr/selectableItemBackground"
			>
		
		<LinearLayout
				android:orientation="vertical"
				android:layout_gravity="center"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				>
			
			
			<com.google.android.material.textfield.TextInputLayout
					android:id="@+id/email_text_input"
					style="@style/TextInput"
					android:layout_width="match_parent"
					android:layout_height="70dp"
					android:layout_marginStart="8dp"
					android:layout_marginLeft="8dp"
					android:layout_marginTop="5dp"
					android:layout_marginEnd="8dp"
					android:layout_marginRight="8dp"
					android:hint="@string/email_hint"
					android:textColorHint="@color/black"
					app:errorEnabled="true"
					>
				
				<com.google.android.material.textfield.TextInputEditText
						android:id="@+id/email_edit_text"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:drawableRight="@drawable/ic_email_24dp"
						android:inputType="textEmailAddress"
						/>
			
			</com.google.android.material.textfield.TextInputLayout>
			
			
			<com.google.android.material.textfield.TextInputLayout
					android:id="@+id/password_text_input"
					style="@style/TextInput"
					android:layout_width="match_parent"
					android:layout_height="70dp"
					android:layout_marginStart="8dp"
					android:layout_marginLeft="8dp"
					android:layout_marginTop="5dp"
					android:layout_marginEnd="8dp"
					android:layout_marginRight="8dp"
					android:hint="@string/password_hint"
					android:textColorHint="@color/black"
					app:errorEnabled="true"
					>
				
				<com.google.android.material.textfield.TextInputEditText
						android:id="@+id/password_edit_text"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:drawableRight="@drawable/ic_lock_24dp"
						android:inputType="textPassword"
						/>
			
			</com.google.android.material.textfield.TextInputLayout>
			
			<TextView
					android:layout_margin="@dimen/layout_margin_10dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:id="@+id/forgot_password_txt"
					android:layout_gravity="left"
					android:text="@string/forgot_password"
					android:textColor="@color/darkColor"
					android:textSize="15sp"
					/>
			
			<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="vertical"
					android:layout_gravity="center"
					>
				
				<Button
						android:background="@drawable/login_button_back"
						android:textAllCaps="false"
						android:layout_gravity="center|right"
						android:text="Login"
						android:textColor="@color/white"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:id="@+id/login_btn"
						android:layout_weight="1"
						android:padding="@dimen/layout_margin_10dp"
						/>
				
				<TextView
						android:clickable="true"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:id="@+id/registration_txt"
						android:layout_gravity="right"
						android:layout_marginTop="@dimen/layout_margin_10dp"
						android:layout_marginBottom="@dimen/layout_margin_10dp"
						android:text="@string/registration_text"
						android:textColor="@color/darkColor"						android:textSize="18sp"
						/>
			
			</LinearLayout>
			
		</LinearLayout>
		
		

	
	
	</androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>