<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		xmlns:tools="http://schemas.android.com/tools"
		android:orientation="vertical"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="@drawable/background_login"
		xmlns:card_view="http://schemas.android.com/apk/res-auto"
		>
	
	<androidx.appcompat.widget.Toolbar
			android:id="@+id/toolbar"
			android:layout_width="match_parent"
			android:layout_height="?attr/actionBarSize"
			android:background="?attr/colorPrimary"
			app:popupTheme="@style/AppTheme.PopupOverlay"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			/>
	
	<ProgressBar
			android:visibility="gone"
			style="?android:attr/progressBarStyle"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/progressBar"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintHorizontal_bias="0.5"
			app:layout_constraintTop_toBottomOf="@+id/toolbar"
			/>
	
	<de.hdodenhof.circleimageview.CircleImageView
			xmlns:app="http://schemas.android.com/apk/res-auto"
			android:foreground="@drawable/my_selector"
			android:id="@+id/profile_image"
			android:layout_width="96dp"
			android:layout_height="96dp"
			android:src="@drawable/me_48dp"
			app:civ_border_width="2dp"
			app:civ_border_color="#fff"
			android:layout_marginEnd="8dp"
			app:layout_constraintEnd_toEndOf="parent"
			android:layout_marginRight="8dp"
			android:layout_marginStart="8dp"
			app:layout_constraintStart_toStartOf="parent"
			android:layout_marginLeft="8dp"
			app:layout_constraintTop_toBottomOf="@+id/toolbar"
			android:layout_marginBottom="8dp"
			app:layout_constraintBottom_toTopOf="@+id/cardView"
			/>
	
	<androidx.cardview.widget.CardView
			android:elevation="3dp"
			app:cardCornerRadius="@dimen/layout_margin_10dp"
			android:foreground="?attr/selectableItemBackground"
			android:id="@+id/cardView"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			app:layout_constraintTop_toBottomOf="@+id/profile_image"
			android:layout_marginBottom="16dp"
			app:layout_constraintBottom_toBottomOf="parent"
			card_view:cardBackgroundColor="@color/transparent_color"
			app:layout_constraintStart_toStartOf="@+id/profile_image"
			app:layout_constraintEnd_toEndOf="@+id/profile_image"
			android:layout_marginLeft="8dp"
			android:layout_marginStart="8dp"
			android:layout_marginRight="8dp"
			android:layout_marginEnd="8dp"
			>
		
		<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:layout_gravity="center"
				android:id="@+id/linearLayout"
				>
			
			<com.google.android.material.textfield.TextInputLayout
					android:id="@+id/name_text_input"
					style="@style/TextInput"
					android:layout_width="match_parent"
					android:layout_height="70dp"
					android:layout_marginStart="8dp"
					android:layout_marginLeft="8dp"
					android:layout_marginEnd="8dp"
					android:layout_marginTop="@dimen/layout_margin_5dp"
					android:layout_marginRight="8dp"
					android:hint="@string/name_hint"
					android:textColorHint="@color/black"
					app:errorEnabled="true"
					>
				
				<com.google.android.material.textfield.TextInputEditText
						android:id="@+id/name_edit_text"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:drawableRight="@drawable/ic_person_24dp"
						android:inputType="textPersonName"
						/>
			
			</com.google.android.material.textfield.TextInputLayout>
			
			
			<com.google.android.material.textfield.TextInputLayout
					android:id="@+id/phone_text_input"
					style="@style/TextInput"
					android:layout_width="match_parent"
					android:layout_height="70dp"
					android:layout_marginStart="8dp"
					android:layout_marginLeft="8dp"
					android:layout_marginTop="@dimen/layout_margin_5dp"
					android:layout_marginEnd="8dp"
					android:layout_marginRight="8dp"
					android:hint="@string/phone_hint"
					android:textColorHint="@color/black"
					app:errorEnabled="true"
					>
				
				<com.google.android.material.textfield.TextInputEditText
						android:id="@+id/phone_edit_text"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:drawableRight="@drawable/ic_phone_24dp"
						android:inputType="phone|number"
						/>
			
			</com.google.android.material.textfield.TextInputLayout>
			
			<com.google.android.material.textfield.TextInputLayout
					android:id="@+id/email_text_input"
					style="@style/TextInput"
					android:layout_width="match_parent"
					android:layout_height="70dp"
					android:layout_marginStart="8dp"
					android:layout_marginLeft="8dp"
					android:layout_marginTop="5dp"
					android:layout_marginEnd="8dp"
					android:layout_marginRight="8dp"
					android:hint="@string/email_hint"
					android:textColorHint="@color/black"
					app:errorEnabled="true"
					>
				
				<com.google.android.material.textfield.TextInputEditText
						android:id="@+id/email_edit_text"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:drawableRight="@drawable/ic_email_24dp"
						android:inputType="textEmailAddress"
						/>
			
			</com.google.android.material.textfield.TextInputLayout>
			
			
			<com.google.android.material.textfield.TextInputLayout
					android:id="@+id/password_text_input"
					style="@style/TextInput"
					android:layout_width="match_parent"
					android:layout_height="70dp"
					android:layout_marginStart="8dp"
					android:layout_marginLeft="8dp"
					android:layout_marginTop="5dp"
					android:layout_marginEnd="8dp"
					android:layout_marginRight="8dp"
					android:hint="@string/password_hint"
					android:textColorHint="@color/black"
					app:errorEnabled="true"
					>
				
				<com.google.android.material.textfield.TextInputEditText
						android:id="@+id/password_edit_text"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:drawableRight="@drawable/ic_lock_24dp"
						android:inputType="textPassword"
						/>
			
			</com.google.android.material.textfield.TextInputLayout>
			
			<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="vertical"
					>
				
				<Button
						android:layout_margin="@dimen/layout_margin_10dp"
						android:background="@drawable/login_button_back"
						android:textAllCaps="false"
						android:layout_gravity="center|right"
						android:text="Registration"
						android:textColor="@color/white"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:id="@+id/registration_btn"
						android:layout_weight="1"
						android:padding="@dimen/layout_margin_10dp"
						/>
				
				<TextView
						android:clickable="true"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:id="@+id/login_txt"
						android:layout_gravity="right"
						android:layout_marginLeft="@dimen/layout_margin_15dp"
						android:layout_marginTop="@dimen/layout_margin_5dp"
						android:layout_marginRight="@dimen/layout_margin_15dp"
						android:layout_marginBottom="@dimen/layout_margin_15dp"
						android:text="@string/have_an_account_text"
						android:textColor="@color/black"
						android:textSize="18sp"
						/>
			
			</LinearLayout>
		
		
		</LinearLayout>
	</androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>